--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <form action="/login" method="post">
   <input type="text" name="username" value=""><br>
-  <input type="text" name="password" value=""><br>
+  <input type="password" name="password" value=""><br>
   <input type="submit" value="submit">
 </form>
